@@ -27,6 +27,7 @@ Version 1.3.rc1 (2011-??-??)
 - Added: inserttag to retrieve data of the current product or a certain product id (#2047)
 - Added: support for postal code ranges in flat shipping module
 - Added: Permission settings now available for all Isotope backend modules
+- Added: Payment and shipping methods can be sorted in checkout module (#2705)
 - Improved: loading products is now centralized in IsotopeFrontend static functions
 - Improved: "Loading product data" is now in the language file (#2215)
 - Improved: Removed size and Added: maxlength attribute to quantity input fields (#2118)
